# nfl-betting-model

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.md  RATING.md  README.md  build_epa_cache.py  build_full_cache.py  calibration_study.py  dashboard.py  docker-compose.yml  experiment_topedge.py  experiment_topedge_analysis.py  grade.py  ingest_graph.py  ingest_madden.py  main.py  picks.py  predict.py  probe_spread.py  probe_totals.py  pyproject.toml  query_demo.py  requirements.txt  streamlit_app.py  study_topn.py  validate_avail.py  validate_avail_upgrade.py  validate_climate.py  validate_epa_splits.py  validate_weather.py
.streamlit/: secrets.toml.example
data/: owners.csv
nfl_betting_model/: __init__.py  availability.py  betting.py  cloud.py  coaching.py  data.py  elo.py  epa.py  epa_oa.py  features.py  graph.py  llm_picker.py  madden.py  model.py  picks.py  qb.py  qb_epa.py  roster.py  starters.py  submit.py  weather.py  weeks.py
predictions/: 2024-grade-wk10.md  2024-wk10.md  2026-wk01.md
predictions/cloud/: graded_games.csv  latest_preview.csv  meta.json  scored_picks.csv
predictions/picks/: players.txt
