[project]
name = "nfl-betting-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.0",
    "fpdf2>=2.7.0",
    "neo4j>=6.2.0",
    "nflreadpy>=0.1.5",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "streamlit>=1.40.0",
]
